# gmail-sqlite-db

./: .gitignore  README.md  analytics.py  checkpoint.py  config.py  db.py  fastmcp_server.py  imap_client.py  main.py  pyproject.toml  queries.py  rendering.py  requirements.txt  sync.py  utils.py
tests/: conftest.py  test_checkpoint.py  test_db.py  test_imap_client.py  test_main.py  test_sync.py
